  * A new apache.aurora.kerberos package has been introduced, containing the Kerberos-supporting
    versions of aurora and aurora_admin (kaurora and kaurora_admin).
  * Most BUILD targets under src/main have been removed, see http://s.apache.org/b8z for details.
- Upgraded Mesos to 0.23.0. NOTE: Aurora executor now requires openssl runtime dependencies that
  were not previously enforced. You will need libcurl available on every Mesos slave (or Docker
  container) to successfully launch Aurora executor. See
  https://github.com/apache/mesos/blob/ebcf8cc2f2f6c236f6e9315447c247e6348141e1/docs/getting-started.md
  for more details on Mesos runtime dependencies.
- Resource quota is no longer consumed by production jobs with a dedicated constraint (AURORA-1457).
- Thrift ConfigGroup.instanceIds field has been deprecated. Use ConfigGroup.instances instead.
- Deprecated SessionValidator and CapabilityValidator interfaces have been removed. All
  SessionKey-typed arguments are now nullable and ignored by the scheduler Thrift API.

0.9.0
-----

- Now requires JRE 8 or greater.
- GC executor is fully replaced by the task state reconciliation (AURORA-1047).
- The scheduler command line argument 'enable_legacy_constraints' has been
  removed, and the scheduler no longer automatically injects 'host' and 'rack'
  constraints for production services. (AURORA-1074)
- SLA metrics for non-production jobs have been disabled by default. They can
  be enabled via the scheduler command line. Metric names have changed from
  '...nonprod_ms' to "...ms_nonprod" (AURORA-1350).

0.8.0
-----

- A new command line argument was added to the observer: --mesos-root
  This must point to the same path as --work_dir on the mesos slave.
- Build targets for thermos and observer have changed, they are now:
  * src/main/python/apache/aurora/tools:thermos
  * src/main/python/apache/aurora/tools:thermos_observer