@@ -16,7 +16,6 @@ respawn
 post-stop exec sleep 5
 
 exec /home/vagrant/aurora/dist/thermos_observer.pex \
-  --root=/var/run/thermos \
   --port=1338 \
   --log_to_disk=NONE \
   --log_to_stderr=google:INFO
